--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.2.1",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
@@ -14,6 +15,7 @@
     "clsx": "^2.1.1",
     "next": "^15.0.3",
     "next-auth": "5.0.0-beta.25",
+    "pnpm": "^10.3.0",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
