--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "next": "^15.1.7",
     "next-auth": "5.0.0-beta.25",
     "pnpm": "^10.3.0",
