--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@react-pdf/renderer": "^4.2.1",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
+    "argon2": "^0.41.1",
     "autoprefixer": "10.4.20",
-    "bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "next": "^15.1.7",
