--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-pdf/renderer": "^4.2.1",
     "@tailwindcss/forms": "^0.5.9",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "argon2": "^0.41.1",
     "autoprefixer": "10.4.20",
