--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
     "scripts/seed.js"
-, "app/ui/projects/docPDF.js", "app/ui/projects/stylesPDF.ts"  ],
+, "app/ui/projects/docPDF.js", "app/ui/projects/stylesPDF.ts", "app/(private)/tickets/components"  ],
   "exclude": ["node_modules"]
 }
