--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "bcryptjs": "^3.0.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
-    "next": "^15.1.7",
+    "next": "15.1.11",
     "next-auth": "^5.0.0-beta.30",
-    
     "pnpm": "^10.3.0",
     "postcss": "8.4.49",
     "react": "19.0.0",
