--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.562.0",
     "next": "15.1.11",
     "next-auth": "^5.0.0-beta.30",
     "pnpm": "^10.3.0",
@@ -24,7 +25,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "3.4.16",
+    "stripe": "^20.1.0",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
