--- a/package.json
+++ b/package.json
@@ -20,20 +20,25 @@
     "lucide-react": "^0.562.0",
     "next": "15.1.11",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.12",
     "pnpm": "^10.3.0",
     "postcss": "8.4.49",
+    "postgres": "^3.4.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
+    "server": "^1.0.42",
     "stripe": "^20.1.0",
     "tailwindcss": "^3.4.16",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
+    "vercel": "^50.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0"
   }
